--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3001
 
-DATABASE_URL="postgresql://postgres:Zikrafdly@123@localhost:5432/TA_db"
+DATABASE_URL="postgresql://postgres.ofichscdyjmnrsakwaly:Zikrafdly@123@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres"
 
 JWT_SECRET="RAHASIA_SUPER_AMAN_UNTUK_TOKEN"
 
